--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "fast-glob": "^3.3.1",
     "mongodb": "^5.7.0",
+    "nanoid": "^3.3.6",
     "validator": "^13.9.0"
   },
   "devDependencies": {
