--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "fast-glob": "^3.3.1",
     "mongodb": "^5.7.0",
+    "mongoose": "^7.4.2",
     "nanoid": "^3.3.6",
     "validator": "^13.9.0"
   },
@@ -33,6 +34,7 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.17",
