--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: user_registration_app
+    container_name: url_shortener_app
     ports:
       - "3000:3000"
     depends_on:
