chore: add script to up and down docker

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "npm run clean && tsc",
     "clean": "rimraf build",
     "dev": "nodemon",
+    "up": "docker compose up -d",
+    "down": "docker compose down",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ext .js,.ts .",
     "prepare-husky": "husky install",
